src/grammar.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/



const COMPILER_KEYWORDS = new Set([
  '!addincludedir', '!addplugindir', '!appendfile', '!appendmemfile', '!assert',
  '!cd', '!define', '!delfile', '!echo', '!else', '!endif', '!error', '!execute',
  '!finalize', '!getdllversion', '!gettlbversion', '!if', '!ifdef', '!ifmacrodef',
  '!ifmacrondef', '!ifndef', '!include', '!insertmacro', '!macro', '!macroend',
  '!macroundef', '!makensis', '!packhdr', '!pragma', '!searchparse', '!searchreplace',
  '!system', '!tempfile', '!undef', '!uninstfinalize', '!verbose', '!warning',
]);

const INSTRUCTION_KEYWORDS = [
  'Abort', 'AddBrandingImage', 'AddSize', 'AllowRootDirInstall', 'AllowSkipFiles',
  'AutoCloseWindow',
  'BGFont', 'BGGradient', 'BrandingText', 'BringToFront',
  'Call', 'CallInstDLL', 'Caption', 'ChangeUI', 'CheckBitmap', 'ClearErrors',
  'CompletedText', 'ComponentText', 'CopyFiles', 'CPU', 'CRCCheck', 'CreateDirectory',
  'CreateFont', 'CreateShortcut',
  'Delete', 'DeleteINISec', 'DeleteINIStr', 'DeleteRegKey', 'DeleteRegValue',
  'DetailPrint', 'DetailsButtonText', 'DirShow', 'DirText', 'DirVar', 'DirVerify',
  'EnableWindow', 'EnumRegKey', 'EnumRegValue', 'Exch', 'Exec', 'ExecShell',
  'ExecShellWait', 'ExecWait', 'ExpandEnvStrings',
  'File', 'FileBufSize', 'FileClose', 'FileErrorText', 'FileOpen', 'FileRead',
  'FileReadByte', 'FileReadUTF16LE', 'FileReadWord', 'FileSeek', 'FileWrite',
  'FileWriteByte', 'FileWriteUTF16LE', 'FileWriteWord', 'FindClose', 'FindFirst',
  'FindNext', 'FindWindow', 'FlushINI', 'Function', 'FunctionEnd',
  'GetCurInstType', 'GetCurrentAddress', 'GetDlgItem', 'GetDLLVersion',
  'GetDLLVersionLocal', 'GetErrorLevel', 'GetFileTime', 'GetFileTimeLocal',
  'GetFullPathName', 'GetFunctionAddress', 'GetInstDirError', 'GetKnownFolderPath',
  'GetLabelAddress', 'GetRegView', 'GetShellVarContext', 'GetTempFileName', 'GetWinVer',
  'Goto',
  'HideWindow',
  'Icon', 'IfAbort', 'IfAltRegView', 'IfErrors', 'IfFileExists', 'IfRebootFlag',
  'IfRtlLanguage', 'IfShellVarContextAll', 'IfSilent', 'InitPluginsDir',
  'InstallButtonText', 'InstallColors', 'InstallDir', 'InstallDirRegKey',
  'InstProgressFlags', 'InstType', 'InstTypeGetText', 'InstTypeSetText',
  'Int64Cmp', 'Int64CmpU', 'Int64Fmt', 'IntCmp', 'IntCmpU', 'IntFmt', 'IntOp',
  'IntPtrCmp', 'IntPtrCmpU', 'IntPtrOp', 'IsWindow',
  'LangString', 'LangStringUP', 'LicenseBkColor', 'LicenseData',
  'LicenseForceSelection', 'LicenseLangString', 'LicenseText', 'LoadAndSetImage',
  'LoadLanguageFile', 'LockWindow', 'LogSet', 'LogText',
  'ManifestAppendCustomString', 'ManifestDisableWindowFiltering', 'ManifestDPIAware',
  'ManifestDPIAwareness', 'ManifestGdiScaling', 'ManifestLongPathAware',
  'ManifestMaxVersionTested', 'ManifestSupportedOS', 'MessageBox', 'MiscButtonText',
  'Name', 'Nop',
  'OutFile',
  'Page', 'PageCallbacks', 'PageEx', 'PageExEnd', 'PEAddResource',
  'PEDllCharacteristics', 'PERemoveResource', 'PESubsysVer', 'Pop', 'Push',
  'Quit',
  'ReadEnvStr', 'ReadINIStr', 'ReadMemory', 'ReadRegDWORD', 'ReadRegStr', 'Reboot',
  'RegDLL', 'Rename', 'RequestExecutionLevel', 'ReserveFile', 'Return', 'RMDir',
  'SearchPath', 'Section', 'SectionEnd', 'SectionGetFlags', 'SectionGetInstTypes',
  'SectionGetSize', 'SectionGetText', 'SectionGroup', 'SectionGroupEnd', 'SectionIn',
  'SectionInstType', 'SectionSetFlags', 'SectionSetInstTypes', 'SectionSetSize',
  'SectionSetText', 'SendMessage', 'SetAutoClose', 'SetBrandingImage', 'SetCompress',
  'SetCompressionLevel', 'SetCompressor', 'SetCompressorDictSize', 'SetCtlColors',
  'SetCurInstType', 'SetDatablockOptimize', 'SetDateSave', 'SetDetailsPrint',
  'SetDetailsView', 'SetErrorLevel', 'SetErrors', 'SetFileAttributes', 'SetFont',
  'SetOutPath', 'SetOverwrite', 'SetPluginUnload', 'SetRebootFlag', 'SetRegView',
  'SetShellVarContext', 'SetSilent', 'ShowInstDetails', 'ShowUninstDetails',
  'ShowWindow', 'SilentInstall', 'SilentUnInstall', 'Sleep', 'SpaceTexts',
  'StrCmp', 'StrCmpS', 'StrCpy', 'StrLen', 'SubCaption', 'SubSection', 'SubSectionEnd',
  'Target',
  'Unicode', 'UninstallButtonText', 'UninstallCaption', 'UninstallExeName',
  'UninstallIcon', 'UninstallSubCaption', 'UninstallText', 'UninstPage', 'UnRegDLL',
  'UnsafeStrCpy',
  'Var', 'VIAddVersionKey', 'VIFileVersion', 'VIProductVersion',
  'WindowIcon', 'WriteINIStr', 'WriteRegBin', 'WriteRegDWORD', 'WriteRegExpandStr',
  'WriteRegMultiStr', 'WriteRegNone', 'WriteRegStr', 'WriteUninstaller',
  'XPStyle',
];

const INSTRUCTION_LOOKUP = new Set(INSTRUCTION_KEYWORDS.map(kw => kw.toLowerCase()));

class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Script: peg$parseScript,
  };
  let peg$startRuleFunction = peg$parseScript;

  const peg$c0 = "/*";
  const peg$c1 = "*/";
  const peg$c2 = ":";
  const peg$c3 = "!";
  const peg$c4 = "${";
  const peg$c5 = "}";
  const peg$c6 = "::";
  const peg$c7 = "\"";
  const peg$c8 = "\"\"";
  const peg$c9 = "$\\\"";
  const peg$c10 = "'";
  const peg$c11 = "`";
  const peg$c12 = "\r\n";

  const peg$r0 = /^[#;]/;
  const peg$r1 = /^[^\r\n]/;
  const peg$r2 = /^[\r\n]/;
  const peg$r3 = /^[a-zA-Z_.]/;
  const peg$r4 = /^[a-zA-Z0-9_.]/;
  const peg$r5 = /^[a-zA-Z]/;
  const peg$r6 = /^[a-zA-Z0-9]/;
  const peg$r7 = /^[a-zA-Z0-9_]/;
  const peg$r8 = /^[^"\r\n]/;
  const peg$r9 = /^[^'\r\n]/;
  const peg$r10 = /^[^`\r\n]/;
  const peg$r11 = /^[^ \t\r\n;#]/;
  const peg$r12 = /^[ \t]/;
  const peg$r13 = /^[\n\r]/;

  const peg$e0 = peg$classExpectation(["#", ";"], false, false, false);
  const peg$e1 = peg$classExpectation(["\r", "\n"], true, false, false);
  const peg$e2 = peg$literalExpectation("/*", false);
  const peg$e3 = peg$literalExpectation("*/", false);
  const peg$e4 = peg$anyExpectation();
  const peg$e5 = peg$classExpectation(["\r", "\n"], false, false, false);
  const peg$e6 = peg$classExpectation([["a", "z"], ["A", "Z"], "_", "."], false, false, false);
  const peg$e7 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", "."], false, false, false);
  const peg$e8 = peg$literalExpectation(":", false);
  const peg$e9 = peg$otherExpectation("keyword");
  const peg$e10 = peg$literalExpectation("!", false);
  const peg$e11 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false, false);
  const peg$e12 = peg$literalExpectation("${", false);
  const peg$e13 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"]], false, false, false);
  const peg$e14 = peg$literalExpectation("}", false);
  const peg$e15 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false, false);
  const peg$e16 = peg$literalExpectation("::", false);
  const peg$e17 = peg$otherExpectation("argument");
  const peg$e18 = peg$literalExpectation("\"", false);
  const peg$e19 = peg$literalExpectation("\"\"", false);
  const peg$e20 = peg$literalExpectation("$\\\"", false);
  const peg$e21 = peg$classExpectation(["\"", "\r", "\n"], true, false, false);
  const peg$e22 = peg$literalExpectation("'", false);
  const peg$e23 = peg$classExpectation(["'", "\r", "\n"], true, false, false);
  const peg$e24 = peg$literalExpectation("`", false);
  const peg$e25 = peg$classExpectation(["`", "\r", "\n"], true, false, false);
  const peg$e26 = peg$classExpectation([" ", "\t", "\r", "\n", ";", "#"], true, false, false);
  const peg$e27 = peg$classExpectation([" ", "\t"], false, false, false);
  const peg$e28 = peg$otherExpectation("end of line");
  const peg$e29 = peg$literalExpectation("\r\n", false);
  const peg$e30 = peg$classExpectation(["\n", "\r"], false, false, false);

  function peg$f0(lines) {    return lines;  }
  function peg$f1() {    return { type: 'blank' };  }
  function peg$f2(style, value) {    return { type: 'comment', style: style === '#' ? 'hash' : 'semicolon', value: value.trimStart() };  }
  function peg$f3(value) {    return { type: 'comment', style: 'block', value };  }
  function peg$f4(label, trailing) {    return { type: 'label', name: label, comment: trailing ?? undefined };  }
  function peg$f5(keyword, args, trailing) {
    const node = { type: 'instruction', keyword, args };
    if (trailing) node.comment = trailing;
    return node;
  }
  function peg$f6(kw) {    return COMPILER_KEYWORDS.has(kw.toLowerCase());  }
  function peg$f7(kw) {    return kw;  }
  function peg$f8(kw) {    return INSTRUCTION_LOOKUP.has(kw.toLowerCase());  }
  function peg$f9(kw) {    return kw;  }
  function peg$f10(args) {    return args;  }
  function peg$f11(style, value) {    return { style: style === '#' ? 'hash' : 'semicolon', value: value.trimStart() };  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseScript() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseLine();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseLine();
    }
    peg$savedPos = s0;
    s1 = peg$f0(s1);
    s0 = s1;

    return s0;
  }

  function peg$parseLine() {
    let s0;

    s0 = peg$parseBlockComment();
    if (s0 === peg$FAILED) {
      s0 = peg$parseBlankLine();
      if (s0 === peg$FAILED) {
        s0 = peg$parseCommentLine();
        if (s0 === peg$FAILED) {
          s0 = peg$parseLabelLine();
          if (s0 === peg$FAILED) {
            s0 = peg$parseInstructionLine();
          }
        }
      }
    }

    return s0;
  }

  function peg$parseBlankLine() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseEOL();
    if (s2 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f1();
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseCommentLine() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = input.charAt(peg$currPos);
    if (peg$r0.test(s2)) {
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$currPos;
      s4 = [];
      s5 = input.charAt(peg$currPos);
      if (peg$r1.test(s5)) {
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      while (s5 !== peg$FAILED) {
        s4.push(s5);
        s5 = input.charAt(peg$currPos);
        if (peg$r1.test(s5)) {
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
      }
      s3 = input.substring(s3, peg$currPos);
      s4 = peg$parseLineEnd();
      if (s4 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f2(s2, s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseBlockComment() {
    let s0, s1, s2, s3, s4, s5, s6, s7;
